Fix explorer tree is not showing all properties while scrolling (#3228)

--- a/packages/legend-query-builder/style/_query-builder.scss
+++ b/packages/legend-query-builder/style/_query-builder.scss
@@ -671,6 +671,7 @@
 
   &__content {
     height: 100%;
+    overflow: auto;
   }
 }
 
